@@ -66,6 +66,7 @@ function _drupal_maintenance_theme() {
   drupal_add_css(drupal_get_path('module', 'system') . '/system.css', 'module');
   drupal_add_css(drupal_get_path('module', 'system') . '/system-menus.css', 'module');
   drupal_add_css(drupal_get_path('module', 'system') . '/maintenance.css', 'module');
+  drupal_add_css(drupal_get_path('module', 'system') . '/admin.css', 'module');
 }
 
 /**
